# global-id-generator

./: .gitignore  Cargo.toml  README.md  config.yaml
controller/: Cargo.toml
controller/src/: controller.rs  response.rs
interfaces/src/: id.rs  lib.rs  rocks.rs  storage.rs
kono/: Cargo.toml
kono/src/: id.rs  lib.rs  rocks.rs
service/: Cargo.toml
service/src/: error.rs  id.rs
src/controller/src/: controller.rs  lib.rs
src/interfaces/: Cargo.toml
src/kono/src/: id.rs  lib.rs
src/service/src/: config.rs  lib.rs
