[package]
name = "global-id-generator"
description = "The global ID generation service is mainly used in distributed business scenarios to ensure unique IDs."
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
keywords = ["global", "id", "generator"]
homepage = "https://github.com/konomi-network/global-id-generator"
repository = "https://github.com/konomi-network/global-id-generator"
documentation = "https://docs.rs/global-id-generator"
readme = "README.md"

[[bin]]
name = "id-gen-service"
path = "bin/src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "interfaces",
    "controller",
    "service",
    "kono",
    "bin",
]

[dependencies]
log = "0.4.14"
url = "2.2.2"
tokio = { version = "1.13.0", features = ["full"] }
hyper = { version = "0.14", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9.21"
serde_json = "1.0"
env_logger = "0.10.0"

global-id-gen-server = { path = "service", version = "0.1.0" }
controller = { path = "controller", version = "0.1.0" }
kono = { path = "kono", version = "0.1.0", features = ["with-rocksdb"] }
