[package]
name = "controller"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.14"
url = "2.2.2"
tokio = { version = "1.13.0", features = ["full"] }
hyper = { version = "0.14", features = ["full"] }
serde = {version = "1.0", features = ["derive"] }
serde_yaml = "0.9.21"
serde_json = "1.0"
env_logger = "0.10.0"

service = { version = "0.1.0", path = "../service"}
