[package]
name = "kono"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
with-rocksdb = ["interfaces/with-rocksdb"]
default = ["with-rocksdb"]

[dependencies]
interfaces = { version = "0.1.0", path = "../interfaces", features = ["with-rocksdb"] }
log = "0.4.14"
