[package]
name = "interfaces"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
with-rocksdb = ["rocksdb"]
default = ["with-rocksdb"]
std = []

[dependencies]
rocksdb = { version = "0.20.1", optional = true }
